# embedded

./: CMakeLists.txt  README.md
doc/board/: README.md
driver/: led.c  system.c  uart.c
driver/cmsis/: gcc_arm.ld  startup_stm32f1xx.S
driver/cmsis/include/: core_cm3.h
include/: assert.h  led.h  uart.h
include/libc/: stdint.h  string.h
sample/hello/: config.h  main.c  mbedtls_config.h
sample/md/: config.h  main.c
tools/debug/: gdb.init  gdb.sh
